[tool.poetry]
name = "concorrencia"
version = "0.1.0"
description = ""
authors = ["Ralph Ribeiro <rrdias@topaz.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
aiofiles = "^0.7.0"
aiohttp = "^3.8.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
