[tool.poetry]
name = "concorrencia"
version = "0.1.0"
description = ""
authors = ["Ralph Ribeiro <rrdias@topaz.com.br>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
aiofiles = "^0.7.0"
aiohttp = "^3.8.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
